--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "primereact/resources/themes/lara-light-blue/theme.css";
+@import "primereact/resources/primereact.min.css";
+@import "primeicons/primeicons.css";
+
+/*@tailwind base;*/
+/*@tailwind components;*/
+/*@tailwind utilities;*/
 
 :root {
     font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -9,8 +13,8 @@
     font-weight: 400;
 
     color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: rgba(0, 0, 0, 0.52);
+    color: rgba(0, 0, 0, 0.87);
+    background-color: rgba(155, 155, 155, 0.52);
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
@@ -19,11 +23,12 @@
     -webkit-text-size-adjust: 100%;
 }
 
-a {
-    font-weight: 500;
-    color: #646cff;
-    text-decoration: inherit;
-}
-a:hover {
-    color: #535bf2;
-}
+/*a {*/
+/*    font-weight: 500;*/
+/*    color: #646cff;*/
+/*    text-decoration: inherit;*/
+/*}*/
+
+/*a:hover {*/
+/*    color: #535bf2;*/
+/*}*/
