--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,9 +2,9 @@
 @import "primereact/resources/primereact.min.css";
 @import "primeicons/primeicons.css";
 
-/*@tailwind base;*/
-/*@tailwind components;*/
-/*@tailwind utilities;*/
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
     font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -22,13 +22,3 @@
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
 }
-
-/*a {*/
-/*    font-weight: 500;*/
-/*    color: #646cff;*/
-/*    text-decoration: inherit;*/
-/*}*/
-
-/*a:hover {*/
-/*    color: #535bf2;*/
-/*}*/
