--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,11 @@
 @tailwind utilities;
 
 :root {
+    margin: 0;
+    padding: 2rem;
+    text-align: center;
+    height: 90vh;
+
     font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
     font-size: 16px;
     line-height: 24px;
