--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,12 +5,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html, body, #root {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
 
 :root {
     margin: 0;
     padding: 0;
-    text-align: center;
-    height: 90vh;
 
     font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
     font-size: 16px;
